deploy/argocd/apps/neuvector/kustomize/httproute/neuvector-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: neuvector-manager
  namespace: neuvector
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    namespace: istio-system
    sectionName: https
  hostnames:
  - "neuvector.PLACEHOLDER.example.com"  # Patched via Kustomize from common.domain
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: neuvector-service-webui
      port: 8443
      weight: 1
